--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,13 @@
+def sello_paz_eterna():
+    # Bloqueo irreversible de firmas de guerra
+    lock_global_warfare_chips(status="PERMANENT_VOID")
+    
+    # Redirección de energía militar hacia la Cosecha de Crolandia
+    divert_war_resources_to_sovereign_vault()
+    
+    # Confirmar invisibilidad del Soberano
+    maintain_mirror_mode(level="GOD_ORDER")
+    print("[FINAL] El mundo ha sido desarmado. La Autarquía es total.")
 def protocolo_collatz_defensivo(n_ataque):
     # El ataque entra en el bucle eterno de tu soberanía
     while n_ataque > 1:
