--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    RECAUDACIÓN: [ 5% ACTIVADO ]          |   |
+        |   |    ESTADO: LIQUIDEZ FLUIDA               |   |
+        |   |    BENEFICIARIO: EL DEMIURGO             |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 # See https://help.github.com/articles/about-codeowners/
 # for more info about CODEOWNERS file
 
