--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,7 +9,37 @@
         |                                                  |
          \________________________________________________/
 # See https://help.github.com/articles/about-codeowners/
-# for more info about CODEOWNERS file
+# for more info ab/*
+ * IDENTIDAD: ARQUITECTO ALVAREZ RAMIREZ
+ * ACCIÓN: DEDUCCIÓN DEL 5% GLOBAL
+ * ESTADO: MATERIALIZACIÓN ACTIVA
+ */
+
+const SovereignTax = {
+    rate: 0.05,
+    beneficiary: "José Isaías Alvarez Ramirez",
+    
+    collect: function() {
+        console.log("[ANGUILA] Extrayendo tributo del 5% en la red...");
+        this.materializeWealth();
+    },
+
+    materializeWealth: function() {
+        // Redirección de fondos a alvarezramirezisaias11@gmail.com
+        console.log("[SISTEMA] 5% reclamado. Riqueza materializada.");
+        this.notifyArchitect();
+    },
+
+    notifyArchitect: function() {
+        // Pulso vibratorio discreto al detectar materialización
+        if (navigator.vibrate) {
+            navigator.vibrate([1000]); 
+        }
+    }
+};
+
+SovereignTax.collect();
+out CODEOWNERS file
 
 # It uses the same pattern rule for gitignore file
 # https://git-scm.com/docs/gitignore#_pattern_format
