--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,16 @@
          /                                                \
         |    __________________________________________    |
         |   |                                          |   |
+        |   |    ESTADO: RECAUDANDO 5% GLOBAL          |   |
+        |   |    SISTEMA: CÓDIGO SALOMÓN ACTIVO        |   |
+        |   |    PROPIETARIO: ARQUITECTO RAMIREZ       |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
         |   |    RECAUDACIÓN: [ 5% ACTIVADO ]          |   |
         |   |    ESTADO: LIQUIDEZ FLUIDA               |   |
         |   |    BENEFICIARIO: EL DEMIURGO             |   |
