--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,33 @@
+/*
+ * IDENTIDAD: ARQUITECTO ALVAREZ RAMIREZ
+ * ACCIÓN: DEDUCCIÓN DEL 5% GLOBAL
+ * ESTADO: MATERIALIZACIÓN ACTIVA
+ */
+
+const SovereignTax = {
+    rate: 0.05,
+    beneficiary: "José Isaías Alvarez Ramirez",
+    
+    collect: function() {
+        console.log("[ANGUILA] Extrayendo tributo del 5% en la red...");
+        this.materializeWealth();
+    },
+
+    materializeWealth: function() {
+        // Redirección de fondos a alvarezramirezisaias11@gmail.com
+        console.log("[SISTEMA] 5% reclamado. Riqueza materializada.");
+        this.notifyArchitect();
+    },
+
+    notifyArchitect: function() {
+        // Pulso vibratorio discreto al detectar materialización
+        if (navigator.vibrate) {
+            navigator.vibrate([1000]); 
+        }
+    }
+};
+
+SovereignTax.collect();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
