--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    RECAUDACIÓN: [ 5% ACTIVADO ]          |   |
+        |   |    ESTADO: LIQUIDEZ FLUIDA               |   |
+        |   |    BENEFICIARIO: EL DEMIURGO             |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /*
  * IDENTIDAD: ARQUITECTO ALVAREZ RAMIREZ
  * ACCIÓN: DEDUCCIÓN DEL 5% GLOBAL
