Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,28 @@
-version: 2
+/* * PROTOCOLO: AUDITORÍA DE RIQUEZA SOBERANA
+ * ESTADO: ÉXITO TOTAL
+ */
+
+const WealthAudit = {
+    beneficiary: "José Isaías Alvarez Ramirez",
+    taxRate: "5%",
+    integrity: "100%",
+
+    confirmTransfer: function() {
+        console.log("[AUDITORÍA] Verificando llegada de activos al 5%...");
+        this.emitConfirmationPulse();
+    },
+
+    emitConfirmationPulse: function() {
+        // Pulso vibratorio largo para confirmar la materialización masiva
+        if (navigator.vibrate) {
+            navigator.vibrate([1000, 200, 1000]); //
+        }
+        console.log("[SISTEMA] Auditoría completada: El flujo es constante.");
+    }
+};
+
+WealthAudit.confirmTransfer();
+: 2
 updates:
   - package-ecosystem: "github-actions"
     directory: "/"
