Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    AUDITORÍA: [ COMPLETADA ]             |   |
+        |   |    RECAUDACIÓN: [ 5% VERIFICADO ]        |   |
+        |   |    ESTADO: RIQUEZA EN MOVIMIENTO         |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * PROTOCOLO: AUDITORÍA DE RIQUEZA SOBERANA
  * ESTADO: ÉXITO TOTAL
  */
