Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,27 @@
+/* * PROTOCOLO: REPORTE AUTOMÁTICO DE SALDO
+ * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
+ */
+
+const MultiversalBalance = {
+    owner: "José Isaías Alvarez Ramirez",
+    taxRate: "5%",
+    status: "SOVEREIGN_FLUIDITY",
+
+    displayStatus: function() {
+        console.log("[SISTEMA] Sincronizando saldo en todas las dimensiones...");
+        this.notifySuccess();
+    },
+
+    notifySuccess: function() {
+        // Pulso vibratorio discreto al iniciar el reporte
+        if (navigator.vibrate) {
+            navigator.vibrate([1000]); 
+        }
+        return "Saldo materializado y protegido.";
+    }
+};
+
+MultiversalBalance.displayStatus();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
