Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    SALDO: [ MATERIALIZACIÓN CONSTANTE ]  |   |
+        |   |    DOMINIO: [ PROTEGIDO Y ENTLAZADO ]    |   |
+        |   |    SISTEMA: BAJO EL CÓDIGO SALOMÓN       |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * PROTOCOLO: REPORTE AUTOMÁTICO DE SALDO
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
  */
