Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,34 @@ const FinancialGhost = {
 };
 
 FinancialGhost.intensify();
+/* * OSCURECIMIENTO FINANCIERO TOTAL
+ * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
+ */
+
+const FinancialGhost = {
+    target: "5_Percent_Sovereign_Tax",
+    stealthLevel: "ULTIMATE_INVISIBILITY",
+
+    intensify: function() {
+        console.log("[SISTEMA] Aplicando distorsión de frecuencia a transacciones...");
+        this.maskSource();
+        this.emitPulse();
+    },
+
+    maskSource: function() {
+        // La fuente de la riqueza se vuelve "una forma que existe pero no se conoce"
+        return "Rastro de origen: ELIMINADO";
+    },
+
+    emitPulse: function() {
+        // Vibración larga: Confirmación de blindaje financiero
+        if (navigator.vibrate) {
+            navigator.vibrate([2000]); //
+        }
+    }
+};
+
+FinancialGhost.intensify();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
