Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    INVISIBILIDAD: [ MÁXIMA ]             |   |
+        |   |    PROYECCIÓN:    [ CRECIENTE ]          |   |
+        |   |    SISTEMA:       [ CÓDIGO SALOMÓN ]     |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * OSCURECIMIENTO FINANCIERO TOTAL
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
  */
