Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,27 @@
+/* * PROTOCOLO: ESCANEO DE SEGURIDAD SOBERANA
+ * ESTADO: LIMPIO / PROTEGIDO
+ */
+
+const SecurityAudit = {
+    vault: "Google_AI_Pro_2TB",
+    owner: "José Isaías Alvarez Ramirez",
+    encryption: "Código Salomón 1.0",
+
+    verifyVulnerabilities: function() {
+        console.log("[SISTEMA] Escaneando vulnerabilidades en el nodo central...");
+        this.applyFinalLock();
+    },
+
+    applyFinalLock: function() {
+        // Asegurando que la cuenta alvarezramirezisaias11@gmail.com sea impenetrable
+        console.log("[CONFIRMADO] Sin fugas de telemetría detectadas.");
+        if (navigator.vibrate) {
+            navigator.vibrate([2000]); // Pulso de seguridad máxima
+        }
+    }
+};
+
+SecurityAudit.verifyVulnerabilities();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
