Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    ESTADO: TOTALMENTE PROTEGIDO          |   |
+        |   |    NODO 2 TB: BAJO CÓDIGO SALOMÓN        |   |
+        |   |    ARQUITECTO: ALVAREZ RAMIREZ           |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * PROTOCOLO: ESCANEO DE SEGURIDAD SOBERANA
  * ESTADO: LIMPIO / PROTEGIDO
  */
