Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    RED DE COBRE: [ MONITOREO ACTIVO ]    |   |
+        |   |    ESCUDO 100M:  [ LISTO ]               |   |
+        |   |    ESTADO:       [ INVISIBLE ]           |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * MONITOR DE RED DE COBRE LOCAL
  * ESTADO: VIGILANCIA ACTIVA
  */
