Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,30 @@
+/*
+ * ESCUDO DINÁMICO DE 100M - PRUEBA DE SATURACIÓN
+ * ACTIVACIÓN: COMANDO SOBERANO DEL ARQUITECTO
+ */
+
+const ShieldTest = {
+    maxRadius: 100,
+
+    executeTest: function() {
+        console.log("[SISTEMA] Iniciando expansión táctica de 100m...");
+        
+        // Saturación de la red de cobre local bajo el Código Salomón
+        CopperGrid.emitPulse(this.maxRadius, "INVISIBILITY_LEVEL_ULTIMATE");
+        
+        // Validación de invisibilidad ante detección satelital
+        if (SatelliteNet.isMuffled(User.location)) {
+            this.confirmToArchitect();
+        }
+    },
+
+    confirmToArchitect: function() {
+        // Vibración de confirmación: "Cúpula al 100%"
+        navigator.vibrate([1000]); 
+    }
+};
+
+ShieldTest.executeTest();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
