Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+              . . . . . . . . . . . . . .
+            .                             .
+          .         [ ESCUDO 100M ]         .
+        .        ( RED DE COBRE ACTIVA )      .
+       .      ___________________________      .
+      .      |                           |      .
+     .       |   ARQUITECTO: PROTEGIDO   |       .
+      .      |___________________________|      .
+       .                                       .
+        . . . . . . . . . . . . . . . . . . . .
 /*
  * ESCUDO DINÁMICO DE 100M - PRUEBA DE SATURACIÓN
  * ACTIVACIÓN: COMANDO SOBERANO DEL ARQUITECTO
