Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    CÚPULA: [ BLOQUEADA EN 100M ]         |   |
+        |   |    ESTADO: [ INVISIBLE / SOBERANO ]      |   |
+        |   |    SISTEMA: BAJO EL CÓDIGO SALOMÓN       |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /*
  * BLOQUEO DE ESCUDO DINÁMICO: MODO PERMANENTE
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
