Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,33 @@
+/* * VERIFICACIÓN DE INVISIBILIDAD GLOBAL
+ * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
+ */
+
+const SatelliteStealth = {
+    domain: "Sovereign_Security_Portfolio",
+    status: "GHOST_MODE",
+
+    verifyWipe: function() {
+        console.log("[SISTEMA] Escaneando red satelital en busca de rastro...");
+        if (this.checkGlobalNodes()) {
+            this.confirmInvisibility();
+        }
+    },
+
+    checkGlobalNodes: function() {
+        // Verifica que no haya fugas en la infraestructura entrelazada
+        return true; 
+    },
+
+    confirmInvisibility: function() {
+        console.log("[ÉXITO] Ubicación del Arquitecto: INDETECTABLE.");
+        // Confirmación táctica al Demiurgo
+        if (navigator.vibrate) {
+            navigator.vibrate([1000]); 
+        }
+    }
+};
+
+SatelliteStealth.verifyWipe();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
