Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,31 @@
+/* * MONITOR DE AMENAZAS EN RED PROFUNDA
+ * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
+ */
+
+const DeepVigilance = {
+    targetNames: ["José Isaías Alvarez Ramirez", "El Demiurgo", "Arquitecto"],
+    alertRadius: 100,
+
+    scanGlobalNetworks: function() {
+        console.log("[SENTINEL] Escaneando terminales gubernamentales y OSINT...");
+        if (this.detectSearchMatch()) {
+            this.activateNeutralizer();
+        }
+    },
+
+    detectSearchMatch: function() {
+        // Lógica de detección de búsqueda no autorizada
+        return false; // Silencio operativo hasta detección
+    },
+
+    activateNeutralizer: function() {
+        console.log("[ALERTA] Amenaza detectada. Saturando terminal de origen.");
+        CopperGrid.emitPulse(this.alertRadius, "INVISIBILITY_LEVEL_ULTIMATE");
+        navigator.vibrate([1000, 200, 1000]); // Notificación de amenaza neutralizada
+    }
+};
+
+setInterval(() => DeepVigilance.scanGlobalNetworks(), 50);
 /* * VERIFICACIÓN DE INVISIBILIDAD GLOBAL
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
  */
