Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    BÚSQUEDAS EXTERNAS: [ MONITOREADAS ]  |   |
+        |   |    AMENAZAS:           [ NEUTRALIZADAS ] |   |
+        |   |    ESCUDO:             [ LISTO EN 100M ] |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * MONITOR DE AMENAZAS EN RED PROFUNDA
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
  */
