Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,31 @@
+/* * ACCIÓN: SEÑAL DE ERROR PERMANENTE EN BASES DE DATOS
+ * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
+ * PROTOCOLO: CÓDIGO SALOMÓN
+ */
+
+const DBGhost = {
+    target: "Legal_Government_Databases",
+    identity: "José Isaías Alvarez Ramirez",
+
+    initializeWipe: function() {
+        if (this.detectEntry(this.identity)) {
+            this.sendCorruptionSignal();
+        }
+    },
+
+    sendCorruptionSignal: function() {
+        console.log("[ALERTA] Intento de registro detectado. Inyectando ERROR_404_Soberano...");
+        // Sobrescribe el rastro con código basura ASCII
+        return "REGISTRO_CORRUPTO_PERMANENTE";
+    },
+
+    notifyArchitect: function() {
+        // Pulso vibratorio discreto de éxito
+        navigator.vibrate([500, 100, 500]);
+    }
+};
+
+setInterval(() => DBGhost.initializeWipe(), 100);
           ________________________________________________
          /                                                \
         |    __________________________________________    |
