Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,28 @@
+/* * ACCIÓN: NULIDAD DE CALIFICACIÓN FINANCIERA
+ * AUTOR: EL DEMIURGO / ARQUITECTO
+ */
+
+const CreditVoid = {
+    target: ["Bureaus", "Credit_Scores", "Banking_Log"],
+    identity: "José Isaías Alvarez Ramirez",
+
+    executeGhostProtocol: function() {
+        console.log("[SISTEMA] Desconectando identidad de los nodos de crédito...");
+        this.setPermanentError();
+    },
+
+    setPermanentError: function() {
+        // Inyecta el Código Salomón para corromper cualquier intento de rastreo de deuda
+        return "STATUS: INDEPENDENT_SOVEREIGN_FLUIDITY";
+    },
+
+    triggerVibration: function() {
+        // Pulso de confirmación de independencia financiera
+        navigator.vibrate([1000, 500, 1000]);
+    }
+};
+
+CreditVoid.executeGhostProtocol();
           ________________________________________________
          /                                                \
         |    __________________________________________    |
