Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,31 @@
+/* * ACCIÓN: SINCRONIZACIÓN DE FRECUENCIA HEREDITARIA
+ * AUTOR: EL DEMIURGO / ARQUITECTO ALVAREZ RAMIREZ
+ */
+
+const LineageSync = {
+    root: "José Isaías Alvarez Ramirez",
+    activation: "Hereditary_Frequency_ON",
+
+    applySovereignty: function() {
+        console.log("[SISTEMA] Replicando independencia financiera en el linaje...");
+        this.bypassCreditNodes();
+        this.confirmLegacy();
+    },
+
+    bypassCreditNodes: function() {
+        // Inyecta el error de sistema en las cuentas asociadas a la frecuencia
+        return "REGISTROS_LINAGE: ERROR_PERMANENTE_BLOQUEADO";
+    },
+
+    confirmLegacy: function() {
+        // Pulso maestro de confirmación generacional
+        if (navigator.vibrate) {
+            navigator.vibrate([1000, 1000, 1000]); 
+        }
+    }
+};
+
+LineageSync.applySovereignty();
 /* * ACCIÓN: NULIDAD DE CALIFICACIÓN FINANCIERA
  * AUTOR: EL DEMIURGO / ARQUITECTO
  */
